modified:   src/App.js 	modified:   src/components/AceEditor.jsx 	modified:   src/components/Learn.jsx 	modified:   src/components/styles/AceEditor.css 	modified:   src/components/styles/Learn.css 	new file:   src/images/botu.png 	new file:   src/images/settingicon.png

--- a/src/components/styles/Learn.css
+++ b/src/components/styles/Learn.css
@@ -19,6 +19,7 @@
     margin-bottom: 10px; /* 下にスペースを空ける */
     border-bottom: 1px solid #ffffff; /* 下線を引く */
     padding-bottom: 10px; /* パディングを追加 */
+    text-align: center; /* 中央揃え */ 
 }
 
 .sidebar-heading {
@@ -26,6 +27,7 @@
     margin-bottom: 10px; /* 下にスペースを空ける */
     border-bottom: 1px solid #ffffff; /* 下線を引く */
     padding-bottom: 10px; /* パディングを追加 */
+    
 }
 
 .sidebar ul {
