--- a/src/components/styles/AceEditor.css
+++ b/src/components/styles/AceEditor.css
@@ -105,6 +105,7 @@
   margin-top: 10px;
 }
 
+
 /* 実行ボタンと提出ボタン */
 .submit-button {
   padding: 8px 20px;
@@ -128,6 +129,114 @@
   cursor: pointer;
 }
 
+.setting-button{
+  width: 26px;
+  height: 26px;
+  margin-left:auto;
+  margin-right:8px;
+  margin-bottom: 2px;
+  border:none;
+  background-color: #2c3038;
+  cursor:pointer;
+  border-radius: 50%;
+  display: flex; 
+  justify-content: center; 
+  align-items: center;
+}
+
+.setting-button:hover{
+  background-color: #3c4b5a;
+  box-shadow: 0 0 10px #c7c6c3;
+  border-radius: 50%;
+}
+
+.setting-button img{
+  width: 100%; /* 画像の幅を100%に */
+  height: 100%; /* 画像の高さを100%に */
+  border-radius: 50%;
+}
+
+.popup-settings { 
+  position: fixed; 
+  top: 50%; 
+  left: 50%; 
+  transform: translate(-50%, -50%); 
+  background-color: #2c3038; 
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5); 
+  padding: 20px;
+  width: 300px; /* 必要に応じて値を調整 */
+  z-index: 1000;
+  border : none;
+}
+
+.popup-overlay{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+  z-index: 999
+}
+
+.close-button { 
+  position: absolute; 
+  top: 10px; 
+  right: 10px; 
+  background: none; 
+  border: none; 
+  font-size: 18px; 
+  font-weight: bold;
+  cursor: pointer;
+  color: white;
+}
+
+.font-mode-select { 
+  display: flex; align-items: center; 
+} 
+
+.font-mode-select button { 
+  padding: 5px 10px; 
+  border-radius: 16px; 
+  border: none; 
+  font-size: 14px; 
+  background-color: #4d5362; 
+  color: white; 
+  cursor: pointer; 
+  margin: 0 5px; 
+} 
+
+.font-mode-select button:hover { 
+  background-color: #3c4b5a; 
+} 
+
+.font-mode-select input[type="number"] { 
+  -moz-appearance: textfield; /* Firefox */
+  -webkit-appearance: none; /* Safari, Edge, Chrome */
+  appearance: none; /* Standard syntax */
+  width: 50px; 
+  padding: 5px; 
+  border-radius: 16px; 
+  border: none; 
+  font-size: 14px; 
+  background-color: #4d5362; 
+  color: white; 
+  text-align: center;
+}
+
+.popup-header{
+  display: flex; 
+  justify-content: space-between; 
+  align-items: center; 
+  margin-bottom: 10px; 
+  border-bottom: 1px solid #ccc; 
+  padding-bottom: 5px;
+}
+
+.popup-content label {
+  display: block;
+  margin-bottom: 10px; /* label同士の間に少しスペースを空ける */
+}
 .submit-button:hover {
   background-color: #5691d4; /* ホバー時の色 */
 }
