--- a/src/components/styles/AceEditor.css
+++ b/src/components/styles/AceEditor.css
@@ -6,7 +6,6 @@
   display:flex; 
   flex-direction: column; 
   overflow:auto; 
-  border-right: 5px solid #4D5362; 
 } 
 
 .left-tab-container { 
@@ -243,4 +242,20 @@
 
 .run-button:hover{
   background-color: #d4d4d4;
+}
+
+.split {
+  display: flex;
+  flex-direction: row;
+}
+
+.gutter {
+  background-color: #4D5362;
+  background-repeat: no-repeat;
+  background-position: 50%;
+}
+
+.gutter.gutter-horizontal {
+  background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAeCAYAAADkftS9AAAAIklEQVQoU2M4c+bMfxAGAgYYmwGrIIiDjrELjpo5aiZeMwF+yNnOs5KSvgAAAABJRU5ErkJggg==');
+  cursor: col-resize;
 }
