--- a/src/components/styles/AceEditor.css
+++ b/src/components/styles/AceEditor.css
@@ -1,5 +1,9 @@
+.outer-container{
+  display: flex;
+  width:100%;
+}
+
 .left-side-space {
-  flex:1;
   width: 50%;
   background-color: #2c3038; 
   padding: 20px; 
@@ -8,11 +12,9 @@
   flex-direction: column;
   overflow: hidden;
   height: 100%;
-  border-right: #4D5362 5px solid;
 }
 
 .editor-container{
-  flex:1;
   width: 50%;
   background-color: #2c3038; 
   padding: 20px; 
@@ -68,4 +70,26 @@
   flex-direction: row; 
   height: calc(100vh - 60px);
   width: 100%;
+}
+
+.split {
+  display: flex;
+  flex-direction: row;
+  height: 100%;
+  width : 100%;
+}
+
+.gutter {
+  background-color: #4D5362;
+  background-repeat: no-repeat;
+  background-position: 50%;
+  flex:0 0 auto;
+  cursor: col-resize; /* 水平方向のドラッグカーソル */
+}
+
+.gutter.gutter-horizontal {
+  height:100%;
+  width:10px;
+  background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAeCAYAAADkftS9AAAAIklEQVQoU2M4c+bMfxAGAgYYmwGrIIiDjrELjpo5aiZeMwF+yNnOs5KSvgAAAABJRU5ErkJggg==');
+  cursor: col-resize;
 }
