--- a/src/components/styles/Learn.css
+++ b/src/components/styles/Learn.css
@@ -78,7 +78,71 @@
     font-size: 0.8em; /* フォントサイズ */
 }
 
+/*メイン*/
 .learn-base {
-    background-color: #f8f9fa; /* 背景色 */
-    margin-left: 20%; /* サイドメニューと被らないように左マージンを追加 */
-}
+    padding: 50px; /* 周りに余白を追加 */
+    margin-left: 20%; /* サイドバーと被らないように左にマージンを追加（サイドバーの幅に合わせる） */
+    height: 100%;
+  }
+  
+  .learn-title {
+    font-size: 64px;
+    border-bottom: 5px solid #E6E6E6;
+    margin-bottom: 20px; /* 下線との間にスペース */
+    padding-bottom: 0px;
+  }
+  
+  .category-section {
+    margin-bottom: 20px; /* 各カテゴリー間に余白 */
+  }
+  
+  .category-title {
+    font-size: 36px;
+    border-bottom: 5px solid #E6E6E6;
+    margin-bottom:10px;
+    padding-bottom: 0px;
+  }
+  
+  .category-description {
+    font-size: 15px;
+    margin-bottom: 20px; /* 説明文とボタンの間にスペース */
+    margin-top:20px;
+    color: #000000; /* 説明文を少し薄い色に */
+  }
+  
+  .problem-list {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  .problem-item {
+    margin-bottom: 10px; /* ボタン同士の間隔 */
+  }
+  
+  .problem-button {
+    text-decoration: none; /* 下線を確実に削除 */
+    display: block; /* ボタンをブロック要素に */
+    width: calc(100% - 40px); /* サイドバーとの重なりを防ぐ */
+    margin: 0 auto; /* 中央揃え */
+    padding: 10px; /* 内側の余白 */
+    padding-left:20px;
+    font-size: 30px; /* テキストサイズ */
+    font-weight: bold;
+    text-align: left; /* テキストを左揃え */
+    background-color: white; /* 背景色 */
+    border: 1px solid #ccc; /* ボーダー */
+    border-radius: 30px; /* 角を丸く */
+    color: black; /* テキスト色 */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* 浮いているように見せる影 */
+    transition: all 0.2s ease; /* アニメーション */
+  }
+  
+  .problem-button:hover {
+    background-color: #f5f5f5; /* ホバー時の背景色 */
+  }
+  
+  .problem-button:active {
+    transform: translateY(1px); /* 押した時の沈む表現 */
+    box-shadow: inset 0 4px 6px rgba(0, 0, 0, 0.2); /* 押下時の影 */
+  }
