--- a/src/components/styles/AceEditor.css
+++ b/src/components/styles/AceEditor.css
@@ -1,73 +1,90 @@
-.outer-container{
+.outer-container {
   display: flex;
-  width:100%;
+  width: 100%;
 }
 
 .left-side-space {
   width: 50%;
-  background-color: #2c3038; 
-  padding: 20px; 
-  color: #ddd; 
+  background-color: #2c3038;
+  padding: 20px;
+  color: #ddd;
   box-sizing: border-box;
   flex-direction: column;
   overflow: hidden;
   height: 100%;
 }
 
-.editor-container{
+.editor-container {
   width: 50%;
-  background-color: #2c3038; 
-  padding: 20px; 
-  color: #ddd; 
+  background-color: #2c3038;
+  padding: 20px;
+  color: #ddd;
   box-sizing: border-box;
   flex-direction: column;
   overflow: hidden;
   height: 100%;
 }
 
-.left-tab-container { 
-  display:flex; 
-  border-left:3px solid #4D5362; 
-} 
+.left-tab-container {
+  display: flex;
+  border-left: 3px solid #4D5362;
+}
 
-.left-tab1, .left-tab2 { 
-  padding: 10px 20px; 
-  cursor:pointer; 
-  display: flex; 
-  align-items: center; 
-  border-right: 3px solid #4D5362; 
-  flex:1;
-  position : relative;
-} 
+.left-tab1,
+.left-tab2 {
+  padding: 10px 20px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  border-right: 3px solid #4D5362;
+  flex: 1;
+  position: relative;
+}
 
-.tab-divider { 
-  width: 3px; 
-  height: 100%; 
-  background-color: #4D5362; 
-} 
+.left-tab1,
+.left-tab2 {
+  padding: 10px 20px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  /* スムーズな変化を追加 */
+}
+
+.left-tab1:hover,
+.left-tab2:hover {
+  background-color: #4d5362;
+  /* ホバー時の背景色 */
+  color: #fff;
+  /* 必要なら文字色も変更 */
+}
+
+.tab-divider {
+  width: 3px;
+  height: 100%;
+  background-color: #4D5362;
+}
 
 .left-tab-selected::after {
-  content: ""; 
+  content: "";
   position: absolute;
-  bottom: 0; 
-  left: 10px; 
-  right: 10px; 
-  height: 2px; 
-  background-color: white; 
-  border-radius: 1.5px; 
+  bottom: 0;
+  left: 10px;
+  right: 10px;
+  height: 2px;
+  background-color: white;
+  border-radius: 1.5px;
 }
 
-.tab-content-container { 
-  margin-top: 10px; 
-} 
+.tab-content-container {
+  margin-top: 10px;
+}
 
-.tab-content { 
+.tab-content {
   padding: 20px;
 }
 
-.outer-container { 
-  display: flex; 
-  flex-direction: row; 
+.outer-container {
+  display: flex;
+  flex-direction: row;
   height: calc(100vh - 60px);
   width: 100%;
 }
@@ -76,20 +93,21 @@
   display: flex;
   flex-direction: row;
   height: 100%;
-  width : 100%;
+  width: 100%;
 }
 
 .gutter {
   background-color: #4D5362;
   background-repeat: no-repeat;
   background-position: 50%;
-  flex:0 0 auto;
-  cursor: col-resize; /* 水平方向のドラッグカーソル */
+  flex: 0 0 auto;
+  cursor: col-resize;
+  /* 水平方向のドラッグカーソル */
 }
 
 .gutter.gutter-horizontal {
-  height:100%;
-  width:10px;
+  height: 100%;
+  width: 10px;
   background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAeCAYAAADkftS9AAAAIklEQVQoU2M4c+bMfxAGAgYYmwGrIIiDjrELjpo5aiZeMwF+yNnOs5KSvgAAAABJRU5ErkJggg==');
   cursor: col-resize;
 }
