--- a/src/components/styles/Problem.css
+++ b/src/components/styles/Problem.css
@@ -1,64 +1,102 @@
-
 .problem-container {
-    color: #ddd;
+    color: #eee;
     background-color: #2c3038;
-    height : 100%;
+    height: 100%;
     overflow: auto;
-    margin :0;
-    padding : 0;
+    margin: 0;
+    padding: 0;
 }
 
 /*スクロールバーの設定*/
 ::-webkit-scrollbar {
-  width: 5px;
+    width: 5px;
 }
 
 ::-webkit-scrollbar-thumb {
-  border-radius: 30px;
-  background: #383f4d;
+    border-radius: 30px;
+    background: #383f4d;
 }
 
 ::-webkit-scrollbar-track {
-  background: #2c3038;
+    background: #2c3038;
 }
 
-.problem-title{
-    font-size: 25px;
+.problem-title {
     font-weight: bold;
     text-align: left;
-    padding : 10px;
-    color: white;
+    padding: 10px;
     margin-bottom: 2px;
-    margin-top:10px;
-    border-bottom:3px solid #4d5362;
-    border-top :3px solid #4d5362;
+    margin-top: 10px;
+    border-bottom: 3px solid #4d5362;
+    border-top: 3px solid #4d5362;
 }
 
-.problem-title h2{
+.problem-title h2 {
     margin-top: 0;
+    color: white;
+    font-size: 30px;
 }
 
-.problem-statement{
-    display : flex;
+.problem-title p {
+    margin-top: 5px;
+    font-size: 15px;
+}
+
+.problem-statement {
+    display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding-bottom  : 50px;
+    padding-bottom: 50px;
+    padding: 10px;
+    margin-bottom: 100px;
 }
 
-.problem-statement h3, .problem-statement pre { 
-    display: inline-block; 
-    vertical-align: top; /* 上揃え */ 
-    margin-right: 10px; /* 間隔を調整 */
+.problem-statement h3 {
+    margin-top: 10px;
+}
+
+.problem-statement pre {
+    display: inline-block;
+    vertical-align: top;
+    /* 上揃え */
+    margin-right: 10px;
+    /* 間隔を調整 */
+    margin-bottom: 0;
 }
 
 .problem-statement pre {
     background-color: black;
+    width: min(95%, 750px);
+    margin-top: 5px;
+    margin-bottom: 10px;
+    padding: 10px;
 }
 
-.problem-statement h2{
-    margin-top: 20px;
+.problem-statement h1 {
+    margin-top: 10px;
+    font-size: 25px;
 }
 
-.problem-statement p{
-    margin-top: 0px;
+.problem-statement h2 {
+    margin-top: 40px;
+}
+
+.problem-statement p {
+    margin-top: 10px;
+}
+
+.problem-statement ul {
+    list-style-type: disc;
+    margin-left: 20px;
+    padding-left: 20px;
+}
+
+.problem-statement ol {
+    list-style-type: decimal;
+    margin-left: 20px;
+    padding-left: 20px;
+}
+
+.problem-statement li {
+    margin-top: 5px;
 }
