--- a/src/components/styles/Output.css
+++ b/src/components/styles/Output.css
@@ -63,7 +63,7 @@
     width: 100%;
     height: 100px;
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid #888;
     border-radius: 5px;
     resize: none;
     background-color: #3E3E3E;
