modified:   src/App.js 	modified:   src/components/Output.jsx 	modified:   src/components/Results.jsx 	modified:   src/components/styles/App.css 	modified:   src/components/styles/Results.css 	new file:   src/images/Logo.jpg 	new file:   src/images/NakajimaHakase.png 	new file:   src/images/favicon.png

--- a/src/components/styles/App.css
+++ b/src/components/styles/App.css
@@ -71,20 +71,8 @@ html,body{
   color: inherit; 
 }
 
-
-/*
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-*/
+.header-logo {
+  margin-top : 15px;
+  width: 40px;
+  height: 40px;
+}
