--- a/src/components/styles/Results.css
+++ b/src/components/styles/Results.css
@@ -109,3 +109,11 @@
 .text-red-600 {
     color: #f87171;
 }
+
+.not-result{
+    text-align: center;
+    font-size: 20px;
+    margin-top : 250px;
+    color: #ffffff;
+    size : 20px;
+}
