--- a/src/components/styles/Learn.css
+++ b/src/components/styles/Learn.css
@@ -167,6 +167,25 @@
   /* 余白を追加 */
   background-color: #f9f9f9;
   /* 背景色を設定 */
+  scrollbar-width:thin;
+  scrollbar-color:#888 #f1f1f1;
+}
+
+.learn-container::-webkit-scrollbar {
+  width: 8px;
+}
+
+.learn-container::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+.learn-container::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 4px;
+}
+
+.learn-container::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
 
 .learn-base {
@@ -220,45 +239,28 @@
 
 .problem-button {
   text-decoration: none;
-  /* 下線を確実に削除 */
   display: block;
-  /* ボタンをブロック要素に */
   width: calc(100% - 40px);
-  /* サイドバーとの重なりを防ぐ */
   margin: 0 auto;
-  /* 中央揃え */
-  padding: 10px;
-  /* 内側の余白 */
-  padding-left: 20px;
+  padding: 10px 20px;
   font-size: 30px;
-  /* テキストサイズ */
   font-weight: bold;
   text-align: left;
-  /* テキストを左揃え */
   background-color: white;
-  /* 背景色 */
   border: 1px solid #ccc;
-  /* ボーダー */
   border-radius: 30px;
-  /* 角を丸く */
   color: black;
-  /* テキスト色 */
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  /* 浮いているように見せる影 */
   transition: all 0.2s ease;
-  /* アニメーション */
 }
 
 .problem-button:hover {
   background-color: #f5f5f5;
-  /* ホバー時の背景色 */
 }
 
 .problem-button:active {
   transform: translateY(1px);
-  /* 押した時の沈む表現 */
   box-shadow: inset 0 4px 6px rgba(0, 0, 0, 0.2);
-  /* 押下時の影 */
 }
 
 .problem-button.accepted {
@@ -274,6 +276,28 @@
   /* 押した時の沈む表現 */
   box-shadow: inset 0 4px 6px rgba(0, 0, 0, 0.2);
   /* 押下時の影 */
+}
+
+/* 星評価のスタイル */
+[class^="problem-level-"] {
+  font-size: 15px;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 5px;
+}
+
+/* タイトルとチェックマークのコンテナ */
+.title-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+
+/* チェックマークのスタイル */
+.checkmark {
+  margin-left: 10px;
+  flex-shrink: 0;
 }
 
 .problem-level-1 {
@@ -310,19 +334,4 @@
   margin: 0;
   color: #aa66c9;
 }
-
-/*.problem-button {
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding-right: 35px; 
-}*/
-
-.checkmark {
-  position: absolute;
-  right: 0;
-  top: 50%;
-}
-
 
